--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,10 +8,8 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about: |
-    A freelance web designer and front-end developer with a strong desire to learn, design, 
-    develope and deploy awesome web applications.
-
-    Open `_data/authors.yml` to edit this text.
+    Welcome to Sham Code, A YouTube channel for the Tech-savvy. 
+          | Tech Tutorials | PC Customization | Tech Tips and hacks | Tech Reviews Coming soon
 
   # This photo will be used in the about section
   picture:
@@ -27,12 +25,12 @@ author1:
   social:
     twitter: <username>
     github: <username>
-    # email:           <mail@domain.tld>
+    email: shammulwa@gmail.com
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
     # vk:              <username>
-    # youtube:         <string_string_string>
+    youtube: UCr6toGAQF2x0rkXcDBmrEsA
     # vimeo:           <username>
     # vine:            <username>
     # spotify:         <user>/<number>
